pilot/test/integration/config-auth.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: istio
data:
  mesh: |-
    mixerAddress: istio-mixer:9091
    discoveryAddress: istio-manager:8080
    authPolicy: MUTUAL_TLS
    authCertsPath: /etc/certs
